<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_16"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".RelativeActivity"
    tools:showIn="@layout/activity_relative">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="120dp"
        android:layout_marginEnd="@dimen/separator_margin"
        android:layout_marginBottom="@dimen/margin_8"
        android:text="@string/tv_name"
        android:textSize="@dimen/default_text_size"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:id="@+id/et_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_8"
        android:hint="@string/hint_name"
        android:inputType="text"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBaseline="@id/tv_name"
        android:layout_toEndOf="@id/tv_name"/>

    <TextView
        android:id="@+id/tv_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="120dp"
        android:layout_marginEnd="@dimen/separator_margin"
        android:layout_marginBottom="@dimen/margin_8"
        android:text="@string/tv_gender"
        android:textSize="@dimen/default_text_size"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_alignParentStart="true"
        android:layout_below="@id/tv_name"/>

    <EditText
        android:id="@+id/et_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_8"
        android:hint="@string/hint_gender"
        android:inputType="text"
        android:layout_alignParentEnd="true"
        android:layout_alignBaseline="@id/tv_gender"
        android:layout_below="@id/et_name"
        android:layout_toEndOf="@id/tv_gender"/>

    <TextView
        android:id="@+id/tv_occupation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="120dp"
        android:layout_marginEnd="@dimen/separator_margin"
        android:layout_marginBottom="@dimen/margin_8"
        android:text="@string/tv_occupation"
        android:textSize="@dimen/default_text_size"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_alignParentStart="true"
        android:layout_below="@id/tv_gender"/>

    <EditText
        android:id="@+id/et_occupation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_8"
        android:hint="@string/hint_occupation"
        android:inputType="text"
        android:layout_alignParentEnd="true"
        android:layout_alignBaseline="@id/tv_occupation"
        android:layout_below="@id/et_gender"
        android:layout_toEndOf="@id/tv_occupation"/>

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="120dp"
        android:layout_marginEnd="@dimen/separator_margin"
        android:layout_marginBottom="@dimen/margin_8"
        android:text="@string/tv_email"
        android:textSize="@dimen/default_text_size"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_alignParentStart="true"
        android:layout_below="@id/tv_occupation"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_8"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:layout_alignParentEnd="true"
        android:layout_alignBaseline="@id/tv_email"
        android:layout_below="@id/et_occupation"
        android:layout_toEndOf="@id/tv_email"/>

    <TextView
        android:id="@+id/tv_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="120dp"
        android:layout_marginEnd="@dimen/separator_margin"
        android:layout_marginBottom="@dimen/margin_8"
        android:text="@string/tv_contact"
        android:textSize="@dimen/default_text_size"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_alignParentStart="true"
        android:layout_below="@id/tv_email"/>

    <EditText
        android:id="@+id/et_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_8"
        android:hint="@string/hint_contact"
        android:inputType="number"
        android:layout_alignParentEnd="true"
        android:layout_alignBaseline="@id/tv_contact"
        android:layout_below="@id/et_email"
        android:layout_toEndOf="@id/tv_contact"/>

    <TextView
        android:id="@+id/tv_hobby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="120dp"
        android:layout_marginEnd="@dimen/separator_margin"
        android:layout_marginBottom="@dimen/margin_8"
        android:text="@string/tv_hobby"
        android:textSize="@dimen/default_text_size"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_alignParentStart="true"
        android:layout_below="@id/tv_contact"/>

    <EditText
        android:id="@+id/et_hobby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_8"
        android:hint="@string/hint_hobby"
        android:inputType="text"
        android:layout_alignParentEnd="true"
        android:layout_alignBaseline="@id/tv_hobby"
        android:layout_below="@id/et_contact"
        android:layout_toEndOf="@id/tv_hobby"/>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_64"
        android:layout_marginEnd="@dimen/margin_64"
        android:layout_gravity="center_horizontal"
        android:text="@string/btn_submit"
        android:onClick="formSubmitted"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/et_hobby" />
</RelativeLayout>